;;;; -*- coding: utf-8; -*-
changes in sbcl-1.0.23 relative to 1.0.22:
  * optimization: printing with *PRINT-PRETTY* true is now more
    efficient as long as the object being printed doesn't require
    special handling by the pretty printer.

changes in sbcl-1.0.22 relative to 1.0.21:
  * minor incompatible change: LOAD-SHARED-OBJECT no longer by default looks
    for the shared object in the current directory, but passes the native
    namestring of the designated pathname to the operation system's shared
    object loading function as-it.
  * minor incompatible change: --disable-debugger toplevel option now takes
    effect before processing of initialization files and --eval or --load
    options.
  * new feature: new commandline argument: --script, which supports
    shebang lines. See documentation for details. (based on work by
    Kevin Reid)
  * new feature: SAVE-LISP-AND-DIE can save current values of
    --dynamic-space-size and --control-stack-size in the executable core,
    causing it to skip normal runtime option processing. See documentation
    for details. (thanks to Zach Beane)
  * enhancement: inoccous calls to EVAL or generic functions dispatching
    on subclasses of eg. STREAM no longer cause compiler notes to appear.
  * enhancement: the system no longer resignals errors from --load and
    --eval toplevel arguments as SIMPLE-ERRORS, which caused restarts
    associated with the original error to be lost. (thanks to Ariel
    Badichi)
  * enhancement: :DONT-SAVE keyword argument has been added to
    LOAD-SHARED-OBJECT for controlling interaction with
    SAVE-LISP-AND-DIE, and UNLOAD-SHARED-OBJECT can be used to undo
    the effects of an earlier LOAD-SHARED-OBJECT call.
  * bug fix: ADJUST-ARRAY on multidimensional arrays used bogusly give
    them a fill pointer unless :DISPLACED-TO or :INITIAL-CONTENTS were
    provided. (reported by Cedric St-Jean)
  * bug fix: circularity handling in the reader did not treat raw