@@ -3,6 +3,8 @@ changes in sbcl-1.0.23 relative to 1.0.22:
   * optimization: printing with *PRINT-PRETTY* true is now more
     efficient as long as the object being printed doesn't require
     special handling by the pretty printer.
+  * bug fix: slot symbol-macros from WITH-SLOTS inside DEFMETHOD bodies
+    now interact correctly with type declarations.
 
 changes in sbcl-1.0.22 relative to 1.0.21:
   * minor incompatible change: LOAD-SHARED-OBJECT no longer by default looks
